<?xml version="1.0"?>
<package format="2">
  <name>hachinoji_description</name>
  <version>0.1.0</version>
  <description>This sensor description is for personal evaluation, derived from aip_xx1</description>

  <maintainer email="daichi.murakami@tier4.jp">Daichi Murakami</maintainer>
  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
